--- a/main.html
+++ b/main.html
@@ -13,12 +13,12 @@
       flex-direction: column;
     }
 
-    #head {
+    #headCont {
       position: sticky;
       top: 0;
 
       height: 9vh;
-      padding: 15px;
+      padding: 20px 15px 10px 15px;
 
       background-color: slategrey;
       color: #eaeaea;
@@ -36,6 +36,8 @@
 
       width: 70%;
       font-size: 120%;
+
+      margin-bottom: 2.5em;
     }
 
     #vdom {
@@ -67,18 +69,30 @@
       font-style: normal;
     }
 
+    .linebreak {
+      color: #eaeaea;
+    }
+
+    .lb2 {
+      color: #8d9aa6;
+    }
+
     ul {
       font-size: 125%;
       width: 90%;
+    }
+
+    .arrow {
+      font-size: 300%;
     }
 
   </style>
 </head>
 
 <body>
+  <div id="1"> </div>
   <div id="headCont"> </div>
   <div id="introCont" class="self-center"> </div>
-  <br>
   <div id="vdom"> </div>
 
   <!-- TAILWIND -->
@@ -102,7 +116,7 @@
 
           <div className="flex gap-3">
             <a className="headBtn" href="#content2"> content2 </a>
-            <a className="headBtn" href="#introCont"> UP </a>
+            <a className="headBtn" href="#1"> UP </a>
           </div>
         </div>
       )
@@ -111,9 +125,9 @@
     function Intro() {
       return(
         <div className="flex flex-col justify-center">
-          <h3 className="heading"> &#x2728; What is React?	&#x2728; </h3>
+          <h3 className="heading"> &#x2728; What is React?	&#x2728; <br /> </h3>
           <hr />
-          <br />
+          <p className="linebreak"> \ </p>
 
           <ul className="list-disc pl-6 list-inside self-center">
             <li className="pb-2"> A JS library for building user interfaces/interactive webpages created by Jordan Walke </li>
@@ -128,28 +142,52 @@
       return(
         <div className="flex flex-col justify-center">
           <h3 className="heading2"> The Virtual DOM </h3>
-          <br />
-          <div className="flex flex-row gap-5">
-            <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea]">
-              <div className="px-6 py-4">
-                <div className="text-gray-700 font-bold text-xl mb-2">aaa</div>
-                <p className="text-gray-700 text-base">
-                  aaa
-                </p>
+          <p className="lb2"> / </p>
+          <div className="flex flex-col gap-5 justify-center items-center">
+            <div className="flex flex-row gap-5">
+              <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea]">
+                <div className="px-6 py-4">
+                  <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
+                  <p className="text-gray-700 text-base text-center">
+                    aaa
+                  </p>
+                </div>
+              </div>
+              <p className="arrow"> &#x2192; </p>
+              <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea]">
+                <div className="px-6 py-4">
+                  <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
+                  <p className="text-gray-700 text-base text-center">
+                    aaa
+                  </p>
+                </div>
               </div>
             </div>
-            <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea]">
-              <div className="px-6 py-4">
-                <div className="text-gray-700 font-bold text-xl mb-2">aaa</div>
-                <p className="text-gray-700 text-base">
-                  aaa
-                </p>
+            <p className="arrow pl-45"> &#x2193; </p>
+            <div className="flex flex-row gap-5">
+              <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea]">
+                <div className="px-6 py-4">
+                  <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
+                  <p className="text-gray-700 text-base text-center">
+                    aaa
+                  </p>
+                </div>
+              </div>
+              <p className="arrow"> &#x2190; </p>
+              <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea]">
+                <div className="px-6 py-4">
+                  <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
+                  <p className="text-gray-700 text-base text-center">
+                    aaa
+                  </p>
+                </div>
               </div>
             </div>
+            <p className="arrow"> &#x2193; </p>
             <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea]">
               <div className="px-6 py-4">
-                <div className="text-gray-700 font-bold text-xl mb-2">aaa</div>
-                <p className="text-gray-700 text-base">
+                <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
+                <p className="text-gray-700 text-base text-center">
                   aaa
                 </p>
               </div>
