--- a/main.html
+++ b/main.html
@@ -17,8 +17,7 @@
       position: sticky;
       top: 0;
 
-      height: 9vh;
-      padding: 20px 15px 10px 15px;
+      padding: 15px;
 
       background-color: slategrey;
       color: #eaeaea;
@@ -91,7 +90,7 @@
 
 <body>
   <div id="1"> </div>
-  <div id="headCont"> </div>
+  <div id="headCont" class=""> </div>
   <div id="introCont" class="self-center"> </div>
   <div id="vdom"> </div>
 
@@ -142,54 +141,77 @@
       return(
         <div className="flex flex-col justify-center">
           <h3 className="heading2"> The Virtual DOM </h3>
-          <p className="lb2"> / </p>
+          <p className="lb2"> / </p> <p className="lb2"> / </p>
           <div className="flex flex-col gap-5 justify-center items-center">
-            <div className="flex flex-row gap-5">
-              <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea]">
-                <div className="px-6 py-4">
-                  <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
-                  <p className="text-gray-700 text-base text-center">
-                    aaa
-                  </p>
+            <div className="flex flex-col justify-center items-center w-100 ">
+              <div className="flex flex-row gap-5 w-100">
+                <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea] w-33">
+                  <div className="px-6 py-4">
+                    <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
+                    <p className="text-gray-700 text-base text-center">
+                      aaa
+                    </p>
+                  </div>
+                </div>
+                <p className="arrow w-33 text-center"> &#x2192; </p>
+                <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea] w-33">
+                  <div className="px-6 py-4">
+                    <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
+                    <p className="text-gray-700 text-base text-center">
+                      aaa
+                    </p>
+                  </div>
                 </div>
               </div>
-              <p className="arrow"> &#x2192; </p>
-              <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea]">
-                <div className="px-6 py-4">
-                  <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
-                  <p className="text-gray-700 text-base text-center">
-                    aaa
-                  </p>
+              <div className="flex flex-row gap-5 w-100 text-center">
+                <div className="w-33">
                 </div>
-              </div>
-            </div>
-            <p className="arrow pl-45"> &#x2193; </p>
-            <div className="flex flex-row gap-5">
-              <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea]">
-                <div className="px-6 py-4">
-                  <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
-                  <p className="text-gray-700 text-base text-center">
-                    aaa
-                  </p>
-                </div>
-              </div>
-              <p className="arrow"> &#x2190; </p>
-              <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea]">
-                <div className="px-6 py-4">
-                  <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
-                  <p className="text-gray-700 text-base text-center">
-                    aaa
-                  </p>
+                <p className="w-33 text-center"> </p>
+                <div className="w-33">
+                  <p className="arrow"> &#x2193; </p>
                 </div>
               </div>
             </div>
-            <p className="arrow"> &#x2193; </p>
-            <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea]">
-              <div className="px-6 py-4">
-                <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
-                <p className="text-gray-700 text-base text-center">
-                  aaa
-                </p>
+            <div className="flex flex-col justify-center items-center w-100 ">
+              <div className="flex flex-row gap-5 w-100">
+                <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea] w-33">
+                  <div className="px-6 py-4">
+                    <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
+                    <p className="text-gray-700 text-base text-center">
+                      aaa
+                    </p>
+                  </div>
+                </div>
+                <p className="arrow w-33 text-center"> &#x2190; </p>
+                <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea] w-33">
+                  <div className="px-6 py-4">
+                    <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
+                    <p className="text-gray-700 text-base text-center">
+                      aaa
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div className="flex flex-row gap-5 w-100 text-center">
+                <div className="w-33">
+                  <p className="arrow"> &#x2193; </p>
+                </div>
+                <p className="w-33 text-center"> </p>
+                <div className="w-33">
+                </div>
+              </div>
+            </div>
+            <div className="flex flex-row gap-5 w-100">
+              <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea] w-33">
+                <div className="px-6 py-4">
+                  <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
+                  <p className="text-gray-700 text-base text-center">
+                    aaa
+                  </p>
+                </div>
+              </div>
+              <p className="arrow w-33 text-center"> </p>
+              <div className="w-33">
               </div>
             </div>
           </div>
