--- a/main.html
+++ b/main.html
@@ -142,76 +142,82 @@
         <div className="flex flex-col justify-center">
           <h3 className="heading2"> The Virtual DOM </h3>
           <p className="lb2"> / </p> <p className="lb2"> / </p>
-          <div className="flex flex-col gap-5 justify-center items-center">
-            <div className="flex flex-col justify-center items-center w-100 ">
-              <div className="flex flex-row gap-5 w-100">
-                <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea] w-33">
+          <div className="flex flex-col gap-5 justify-center items-center self-center w-1/2">
+            <div className="flex flex-row gap-5 justify-center items-center w-7/7">
+              <div className="flex flex-col justify-center items-center w-3/7">
+                <div className="w-1/1 rounded overflow-hidden bg-[#eaeaea]">
                   <div className="px-6 py-4">
-                    <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
+                    <div className="text-gray-700 font-bold text-xl mb-2 text-center"> Initial Render </div>
                     <p className="text-gray-700 text-base text-center">
                       aaa
                     </p>
                   </div>
                 </div>
-                <p className="arrow w-33 text-center"> &#x2192; </p>
-                <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea] w-33">
-                  <div className="px-6 py-4">
-                    <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
-                    <p className="text-gray-700 text-base text-center">
-                      aaa
-                    </p>
-                  </div>
+                <div>
+                  <p className="arrow text-[#8d9aa6]"> &#x2193; </p>
                 </div>
               </div>
-              <div className="flex flex-row gap-5 w-100 text-center">
-                <div className="w-33">
+              <div className="flex flex-col justify-center items-center w-1/7">
+                <p className="arrow text-center"> &#x2192; </p>
+                <p className="arrow text-center text-[#8d9aa6]"> &#x2192; </p>
+              </div>
+              <div className="flex flex-col justify-center items-center w-3/7">
+                <div className="w-1/1 rounded overflow-hidden bg-[#eaeaea]">
+                  <div className="px-6 py-4">
+                    <div className="text-gray-700 font-bold text-xl mb-2 text-center"> Interaction </div>
+                    <p className="text-gray-700 text-base text-center">
+                      aaa
+                    </p>
+                  </div>
                 </div>
-                <p className="w-33 text-center"> </p>
-                <div className="w-33">
+                <div>
                   <p className="arrow"> &#x2193; </p>
                 </div>
               </div>
             </div>
-            <div className="flex flex-col justify-center items-center w-100 ">
-              <div className="flex flex-row gap-5 w-100">
-                <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea] w-33">
+            <div className="flex flex-row gap-5 justify-center items-center w-7/7">
+              <div className="flex flex-col justify-center items-center w-3/7">
+                <div className="w-1/1 rounded overflow-hidden bg-[#eaeaea]">
                   <div className="px-6 py-4">
-                    <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
+                    <div className="text-gray-700 font-bold text-xl mb-2 text-center"> Rerender </div>
                     <p className="text-gray-700 text-base text-center">
                       aaa
                     </p>
                   </div>
                 </div>
-                <p className="arrow w-33 text-center"> &#x2190; </p>
-                <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea] w-33">
-                  <div className="px-6 py-4">
-                    <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
-                    <p className="text-gray-700 text-base text-center">
-                      aaa
-                    </p>
-                  </div>
+                <div>
+                  <p className="arrow text-center"> &#x2193; </p>
                 </div>
               </div>
-              <div className="flex flex-row gap-5 w-100 text-center">
-                <div className="w-33">
-                  <p className="arrow"> &#x2193; </p>
+              <div className="flex flex-col justify-center items-center w-1/7">
+                <p className="arrow text-center"> &#x2190; </p>
+                <p className="arrow text-center text-[#8d9aa6]"> &#x2192; </p>
+              </div>
+              <div className="flex flex-col justify-center items-center w-3/7">
+                <div className="w-1/1 rounded overflow-hidden bg-[#eaeaea]">
+                  <div className="px-6 py-4">
+                    <div className="text-gray-700 font-bold text-xl mb-2 text-center"> Diffing </div>
+                    <p className="text-gray-700 text-base text-center">
+                      aaa
+                    </p>
+                  </div>
                 </div>
-                <p className="w-33 text-center"> </p>
-                <div className="w-33">
+                <div>
+                  <p className="arrow text-[#8d9aa6]"> &#x2193; </p>
                 </div>
               </div>
             </div>
-            <div className="flex flex-row gap-5 w-100">
-              <div className="max-w-sm rounded overflow-hidden bg-[#eaeaea] w-33">
+            <div className="flex flex-row gap-5 w-7/7">
+              <div className="w-3/7 rounded overflow-hidden bg-[#eaeaea]">
                 <div className="px-6 py-4">
-                  <div className="text-gray-700 font-bold text-xl mb-2 text-center">aaa</div>
+                  <div className="text-gray-700 font-bold text-xl mb-2 text-center"> DOM Update </div>
                   <p className="text-gray-700 text-base text-center">
                     aaa
                   </p>
                 </div>
               </div>
-              <p className="arrow w-33 text-center"> </p>
-              <div className="w-33">
+              <p className="arrow text-center text-[#8d9aa6] w-1/7"> &#x2192; </p>
+              <div className="w-3/7">
               </div>
             </div>
           </div>
