--- a/main.html
+++ b/main.html
@@ -226,7 +226,8 @@
                 </div>
               </div>
               <p className="arrow text-center text-[#8d9aa6] w-1/7"> &#x2192; </p>
-              <div className="w-3/7">
+              <div className="w-3/7 flex justify-center items-center">
+                <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExNWw3aDlrYTI3ZTcxbG9xY3l5emF1Z3NlN2JxMGpvZXdwd2ZyeTB2eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/QlQdLBS70XJcZY1fLF/giphy.gif" />
               </div>
             </div>
           </div>
