--- a/main.html
+++ b/main.html
@@ -45,6 +45,7 @@
 
       background-color: #8d9aa6;
       color: #eaeaea;
+      margin-bottom: 2.5em;
     }
 
     .heading {
@@ -86,6 +87,38 @@
       font-size: 300%;
     }
 
+    .demoWrap {
+      margin: 25px auto;
+      padding: 20px;
+      background-color: #eaeaea;
+      border-radius: 10px;
+      font-size: 120%;
+      margin-bottom: 2.5em;
+      width: 100%;
+      max-width: 800px;
+    }
+
+    #demoArea {
+      position: relative;
+      width: 100%;
+      height: 55vh;
+      margin: 0 auto;
+      background: white;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    .popBtn {
+      position: absolute;
+      border: none;
+      border-radius: 999px;
+      padding: 10px 15px;
+      cursor: pointer;
+      background: slategrey;
+      font-weight: 700;
+      color: #eaeaea;
+    }
+
   </style>
 </head>
 
@@ -94,6 +127,8 @@
   <div id="headCont"> </div>
   <div id="introCont" class="self-center"> </div>
   <div id="vdom"> </div>
+  <div id = "btnDemo" class = "demoWrap"> </div>
+  <div id = "todoDemo" class = "demoWrap"> </div>
 
   <!-- TAILWIND -->
   <meta charset="UTF-8" />
@@ -197,6 +232,209 @@
       )
     }
 
+    function BtnDemo() {
+      const [playing, setPlaying] = React.useState(false);
+      const [score, setScore] = React.useState(0);
+      const [misses, setMisses] = React.useState(0);
+      const [btns, setBtns] = React.useState([]);
+
+      const nextBtn = React.useRef(1);
+      const spawnT = React.useRef(null);
+      const rmvT = React.useRef(null);
+      const spawn = Math.max(900 - score * 15, 500);
+      const rmv = Math.max(1400 - score * 20, 600);
+
+      function startGame() {
+        setPlaying(true);
+        setScore(0);
+        setMisses(0);
+        setBtns([]);
+        nextBtn.current = 1;
+      }
+
+      function resetGame() {
+        setPlaying(false);
+        setScore(0);
+        setMisses(0);
+        setBtns([]);
+        clearInterval(spawnT.current);
+        clearInterval(rmvT.current);
+      }
+
+      React.useEffect(() => {
+        if (!playing) return;
+        clearInterval(spawnT.current);
+
+        spawnT.current = setInterval(() => {
+          setBtns(prev => [...prev,
+            {
+              id: nextBtn.current++,
+              initial: Date.now(),
+              length: rmv
+            }
+          ]);
+        }, spawn);
+
+        return() => clearInterval(spawnT.current);
+      }, [playing, spawn, rmv]);
+
+      React.useEffect(() => {
+        if (!playing) return;
+        clearInterval(rmvT.current);
+
+        rmvT.current = setInterval(() => {
+
+          setBtns(prev => {
+            let expired = 0;
+            const rem = [];
+            for (const b of prev) {
+              if (Date.now() - b.initial > b.length) {
+                expired++;
+              } else {
+                rem.push(b);
+              }
+            }
+            if (expired > 0) setMisses(m => m + expired);
+            return rem;
+          });
+
+        }, 60);
+
+        return () => clearInterval(rmvT.current);
+      }, [playing]);
+
+      React.useEffect(() => {
+        if (misses >= 3) {
+          setPlaying(false);
+          clearInterval(spawnT.current);
+          clearInterval(rmvT.current);
+        }
+      }, [misses]);
+
+      return (
+        <div className = "flex flex-col items-center text-center">
+
+          <h3 className = "heading2"> Button Game Demo </h3>
+
+          <p className = "mb-2">
+            <b>Score:</b> {score} &nbsp; | &nbsp; <b>Misses:</b> {Math.min(misses, 3)}/3
+          </p>
+
+          <div className = "flex gap-3 mb-3">
+            {!playing && misses < 3 && (
+              <button className = "px-4 py-2 rounded-lg bg-slate-500 text-white font-semibold
+                hover:bg-slate-700 active:scale-95 transition" onClick = {startGame}> Start </button>
+            )}
+            <button className = "px-4 py-2 rounded-lg bg-slate-500 text-white font-semibold
+              hover:bg-slate-700 active:scale-95 transition" onClick = {resetGame}> Reset </button>
+          </div>
+
+          <div id= "demoArea">
+            {btns.map(b => (
+              <button key = {b.id} className= "popBtn"
+                onClick = {() => {
+                  if (!playing) return;
+                  setBtns(prev => prev.filter(x => x.id !== b.id));
+                  setScore(s => s + 1);
+                }}
+                style = {{ left: (b.id * 37) % 400, top: (b.id * 61) % 250 }}
+              > CLICK </button>
+            ))}
+          </div>
+
+          {!playing && misses >= 3 && <p className = "mt-3 font-bold"> GAME OVER </p>}
+        </div>
+      );
+
+    }
+
+    function TodoDemo() {
+      const [items, setItems] = React.useState([]);
+      const [text, setText] = React.useState("");
+      const nextId = React.useRef(1);
+
+      function add() {
+        const t = text.trim();
+        if (!t) return;
+        setItems(prev => [...prev,
+          { id: nextId.current++,
+            label: t
+          }
+        ]);
+        setText("");
+      }
+
+      function rmv(id) {
+        setItems(prev => prev.filter(x => x.id != id));
+      }
+
+      function move(id, dir) {
+        setItems(prev => {
+          const i = prev.findIndex(x => x.id == id);
+          const j = i + dir;
+          if (i < 0 || j < 0 || j >= prev.length) return prev;
+          const copy = [...prev];
+          const tmp = copy[i];
+          copy[i] = copy[j];
+          copy[j] = tmp;
+          return copy;
+        });
+      }
+
+      return (
+        <div className = "flex flex-col items-center text-center gap-3">
+          <h3 className = "heading2"> To-Do List Demo </h3>
+
+          <div className = "flex gap-2 w-full">
+            <input
+              className = "flex-1 px-3 py-2 rounded-lg border border-slate-300"
+              value = {text}
+              onChange = {e => setText(e.target.value)}
+              placeholder = "Add a task…"
+              onKeyDown = {e => {
+                if (e.key === "Enter") add();
+              }}
+            />
+
+            <button className="px-4 py-2 rounded-lg bg-slate-500 text-white font-semibold hover:bg-slate-700 active:scale-95 transition"
+              onClick={add}> Add </button>
+            <button className="px-4 py-2 rounded-lg bg-red-600 text-white font-semibold hover:bg-red-700 active:scale-95 transition"
+              onClick={() => setItems([])}> Clear </button>
+          </div>
+
+          <ul className = "flex flex-col gap-2 w-full">
+            {items.length == 0 && (
+              <li className = "text-slate-600 italic"> No tasks yet.</li>
+            )}
+
+            {items.map((it, i) => (
+              <li key={it.id} className="flex items-center justify-between bg-white rounded-lg px-3 py-2">
+                <span className="text-left">
+                  <b className="text-slate-500">{i + 1}.</b> {it.label}
+                </span>
+
+                <div className="flex gap-2">
+                  <button
+                    className="px-2 py-1 rounded bg-slate-200 hover:bg-slate-300 transition"
+                    onClick={() => move(it.id, -1)} title="Move up"
+                  > ↑ </button>
+                  <button
+                    className="px-2 py-1 rounded bg-slate-200 hover:bg-slate-300 transition"
+                    onClick={() => move(it.id, +1)} title="Move down"
+                  > ↓	</button>
+                  <button
+                    className="px-2 py-1 rounded bg-red-500 text-white hover:bg-red-600 transition"
+                    onClick={() => rmv(it.id)} title="Delete"
+                  > ✕ </button>
+                </div>
+              </li>
+            ))}
+          </ul>
+
+        </div>
+      );
+    }
+
     const headCont = ReactDOM.createRoot(document.getElementById('headCont'));
     headCont.render(<Head />);
 
@@ -205,6 +443,13 @@
 
     const vdom = ReactDOM.createRoot(document.getElementById('vdom'));
     vdom.render(<VDom />);
+
+    const btnDemo = ReactDOM.createRoot(document.getElementById('btnDemo'));
+    btnDemo.render(<BtnDemo />);
+
+    const todoDemo = ReactDOM.createRoot(document.getElementById('todoDemo'));
+    todoDemo.render(<TodoDemo />);
+
   </script>
 </body>
 
